change login procedure

--- a/spec/fixtures/files/dashboard.html
+++ b/spec/fixtures/files/dashboard.html
@@ -28,7 +28,7 @@
 		<div id="saveBox"></div>
 		<span id="msgBox"></span>
 		<script>
-			var _unit='123456789', _user='1234';		</script>
+			var _unit='123456789', _user='1234'; user={"loged": true, "auth":4012}		</script>
 
 
 
